--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-token: "TqdxbQ63j2y1GlYS"                  # Lidraughts OAuth2 Token
+token: "d25bgsUxRUE81KN5"                  # Lidraughts OAuth2 Token
 url: "https://lidraughts.org/"  # Lidraughts base URL
 
 engine:                      # Engine settings
